<resources>
    <string name="app_name">iotW/Firebase</string>
    <string name="temperature_Text">Temperature :</string>
    <string name="humidity">Humidity :</string>
    <string name="loading">Loading…</string>
    <string name="auto">Auto On (Temp)</string>
    <string name="on">On </string>

    <string name="location_updated_message">Location updated</string>
    <string name="permission_denied">Permissions Denied!</string>
    <string name="unable_to_find_location">Unable to find location</string>

    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>
    <string name="distance">Distance from last geolocation</string>
    <string name="set_home_location">set home location</string>
    <string name="homebuttonText">set home location</string>

    <string name="Location_set_message">Home Location Set</string>
    <string name="Location_not_set_message">Home Location is not Set</string>
    <string name="autogps">Auto On (GPS)</string>
    <string name="title_activity_my_sliding_menu">mySlidingMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sensor_name">Sensor Name</string>
    <string name="enter_name_of_sensor_to_be_remove">Enter Name of Sensor To be Remove</string>
    <string name="group">Group :</string>
    <string name="set_home_location_">Set Home Location</string>
    <string name="add_sensor">Add Sensor</string>
    <string name="remove_sensor">Remove Sensor</string>
    <string name="remove_all_sensor">Remove All Sensor</string>
    <string name="help">Help</string>
    <string name="add_group">Add Group</string>
    <string name="remove_all">Remove All</string>
    <string name="remove_group">Remove Group</string>
    <string name="enter_name_of_group_to_be_remove">Enter name of Group to be remove</string>
    <string name="group_name">Group Name</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="update">Update</string>
    <string name="power">Power</string>
    <string name="fan_speed">Fan Speed</string>
    <string name="sleep">Sleep</string>
    <string name="swing">Swing</string>
    <string name="ambient">Ambient</string>

    <string-array name="sensor_array">
        <item>Control</item>
        <item>Temperature</item>
        <item>Humidity</item>
        <item>PM25</item>
        <item>PM10</item>
        <item>CO2</item>
        <item>eCO2</item>
        <item>VOC</item>
    </string-array>

    <string-array name="fan_speed">
        <item>Min</item>
        <item>Medium</item>
        <item>Max</item>
        <item>Turbo</item>
        <item>Quiet</item>
        <item>Auto</item>
    </string-array>

</resources>
